[package]
name = "ant-book-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
proconio = "0.4.3"
superslice = "1.0.0"

[[bin]]
name = "1-1a"
path = "src/bin/1-1a-kujibiki.rs"

[[bin]]
name = "1-6a"
path = "src/bin/1-6a-triangle.rs"

[[bin]]
name = "1-6b"
path = "src/bin/1-6b-ants.rs"

[[bin]]
name = "1-6c"
path = "src/bin/1-6c-kujibiki.rs"

[[bin]]
name = "2-1a"
path = "src/bin/2-1a-bubunwa.rs"

[[bin]]
name = "2-1b"
path = "src/bin/2-1b-lake-counting.rs"

[[bin]]
name = "2-1c"
path = "src/bin/2-1c-maze.rs"

[[bin]]
name = "2-2a"
path = "src/bin/2-2a-coin.rs"

[[bin]]
name = "2-2b"
path = "src/bin/2-2b-kukan-scheduling.rs"

[[bin]]
name = "2-2c"
path = "src/bin/2-2c-best-cow-line.rs"

[[bin]]
name = "2-2d"
path = "src/bin/2-2d-saruans-army.rs"

[[bin]]
name = "2-2e"
path = "src/bin/2-2e-fence-repair.rs"

[[bin]]
name = "2-3a"
path = "src/bin/2-3a-knapsack.rs"

[[bin]]
name = "2-3b"
path = "src/bin/2-3b-lcs.rs"

[[bin]]
name = "2-3c"
path = "src/bin/2-3c-knapsack-unlimited.rs"

[[bin]]
name = "2-3d"
path = "src/bin/2-3d-knapsack2.rs"

[[bin]]
name = "2-3e"
path = "src/bin/2-3e-lis.rs"

[[bin]]
name = "2-3f"
path = "src/bin/2-3f-division-num.rs"

[[bin]]
name = "2-3g"
path = "src/bin/2-3g-duplicate-combination.rs"

[[bin]]
name = "2-4a"
path = "src/bin/2-4a-expedition.rs"

[[bin]]
name = "2-4b"
path = "src/bin/2-4b-food-chain.rs"

[[bin]]
name = "2-5a"
path = "src/bin/2-5a-bipartite-judge.rs"

[[bin]]
name = "3-5a"
path = "src/bin/3-5a-max-flow.rs"

[[bin]]
name = "3-5b"
path = "src/bin/3-5b-bipartite-matching.rs"

[[bin]]
name = "3-5c"
path = "src/bin/3-5c-min-cost-flow.rs"
