[package]
name = "ant-book-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
num-integer = "0.1.45"
petgraph = "0.6.0"
proconio = { version = "0.4.3", features = ["derive"] }
superslice = "1.0.0"

[[bin]]
name = "1-1a"
path = "src/bin/1-1a-kujibiki.rs"

[[bin]]
name = "1-6a"
path = "src/bin/1-6a-triangle.rs"

[[bin]]
name = "1-6b"
path = "src/bin/1-6b-ants.rs"

[[bin]]
name = "1-6c"
path = "src/bin/1-6c-kujibiki.rs"

[[bin]]
name = "2-1a"
path = "src/bin/2-1a-bubunwa.rs"

[[bin]]
name = "2-1b"
path = "src/bin/2-1b-lake-counting.rs"

[[bin]]
name = "2-1c"
path = "src/bin/2-1c-maze.rs"

[[bin]]
name = "2-2a"
path = "src/bin/2-2a-coin.rs"

[[bin]]
name = "2-2b"
path = "src/bin/2-2b-kukan-scheduling.rs"

[[bin]]
name = "2-2c"
path = "src/bin/2-2c-best-cow-line.rs"

[[bin]]
name = "2-2d"
path = "src/bin/2-2d-saruans-army.rs"

[[bin]]
name = "2-2e"
path = "src/bin/2-2e-fence-repair.rs"

[[bin]]
name = "2-3a"
path = "src/bin/2-3a-knapsack.rs"

[[bin]]
name = "2-3b"
path = "src/bin/2-3b-lcs.rs"

[[bin]]
name = "2-3c"
path = "src/bin/2-3c-knapsack-unlimited.rs"

[[bin]]
name = "2-3d"
path = "src/bin/2-3d-knapsack2.rs"

[[bin]]
name = "2-3e"
path = "src/bin/2-3e-lis.rs"

[[bin]]
name = "2-3f"
path = "src/bin/2-3f-division-num.rs"

[[bin]]
name = "2-3g"
path = "src/bin/2-3g-duplicate-combination.rs"

[[bin]]
name = "2-4a"
path = "src/bin/2-4a-expedition.rs"

[[bin]]
name = "2-4b"
path = "src/bin/2-4b-food-chain.rs"

[[bin]]
name = "2-5a"
path = "src/bin/2-5a-bipartite-judge.rs"

[[bin]]
name = "2-5b"
path = "src/bin/2-5b-roadblocks.rs"

[[bin]]
name = "2-5c"
path = "src/bin/2-5c-conscription.rs"

[[bin]]
name = "2-5d"
path = "src/bin/2-5d-layout.rs"

[[bin]]
name = "2-6a"
path = "src/bin/2-6a-gcd.rs"

[[bin]]
name = "2-6b"
path = "src/bin/2-6b-extend-gcd.rs"

[[bin]]
name = "2-6c"
path = "src/bin/2-6c-eratosthenes.rs"

[[bin]]
name = "2-6d"
path = "src/bin/2-6d-seg-eratosthenes.rs"

[[bin]]
name = "2-6e"
path = "src/bin/2-6e-carmichael.rs"

[[bin]]
name = "3-1a"
path = "src/bin/3-1a-lower-bound.rs"

[[bin]]
name = "3-1b"
path = "src/bin/3-1b-cable-master.rs"

[[bin]]
name = "3-1c"
path = "src/bin/3-1c-aggressive-cows.rs"

[[bin]]
name = "3-1d"
path = "src/bin/3-1d-average-max.rs"

[[bin]]
name = "3-2a"
path = "src/bin/3-2a-subsequence.rs"

[[bin]]
name = "3-2b"
path = "src/bin/3-2b-jessicas-reading.rs"

[[bin]]
name = "3-2c"
path = "src/bin/3-2c-face-the-right-way.rs"

[[bin]]
name = "3-2d"
path = "src/bin/3-2d-fliptile.rs"

[[bin]]
name = "3-2e"
path = "src/bin/3-2e-physics-experiment.rs"

[[bin]]
name = "3-2f"
path = "src/bin/3-2f-4-values-whose-sum-is-0.rs"

[[bin]]
name = "3-5a"
path = "src/bin/3-5a-max-flow.rs"

[[bin]]
name = "3-5b"
path = "src/bin/3-5b-bipartite-matching.rs"

[[bin]]
name = "3-5c"
path = "src/bin/3-5c-min-cost-flow.rs"
