[package]
name = "ant-book-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
nalgebra = "0.31.1"
num-integer = "0.1.45"
petgraph = "0.6.0"
proconio = { version = "0.4.3", features = ["derive"] }
superslice = "1.0.0"

[[bin]]
name = "1-1a"
path = "src/bin/1-1a-kujibiki.rs"

[[bin]]
name = "1-6a"
path = "src/bin/1-6a-triangle.rs"

[[bin]]
name = "1-6b"
path = "src/bin/1-6b-ants.rs"

[[bin]]
name = "1-6c"
path = "src/bin/1-6c-kujibiki.rs"

[[bin]]
name = "2-1a"
path = "src/bin/2-1a-bubunwa.rs"

[[bin]]
name = "2-1b"
path = "src/bin/2-1b-lake-counting.rs"

[[bin]]
name = "2-1c"
path = "src/bin/2-1c-maze.rs"

[[bin]]
name = "2-2a"
path = "src/bin/2-2a-coin.rs"

[[bin]]
name = "2-2b"
path = "src/bin/2-2b-kukan-scheduling.rs"

[[bin]]
name = "2-2c"
path = "src/bin/2-2c-best-cow-line.rs"

[[bin]]
name = "2-2d"
path = "src/bin/2-2d-saruans-army.rs"

[[bin]]
name = "2-2e"
path = "src/bin/2-2e-fence-repair.rs"

[[bin]]
name = "2-3a"
path = "src/bin/2-3a-knapsack.rs"

[[bin]]
name = "2-3b"
path = "src/bin/2-3b-lcs.rs"

[[bin]]
name = "2-3c"
path = "src/bin/2-3c-knapsack-unlimited.rs"

[[bin]]
name = "2-3d"
path = "src/bin/2-3d-knapsack2.rs"

[[bin]]
name = "2-3e"
path = "src/bin/2-3e-lis.rs"

[[bin]]
name = "2-3f"
path = "src/bin/2-3f-division-num.rs"

[[bin]]
name = "2-3g"
path = "src/bin/2-3g-duplicate-combination.rs"

[[bin]]
name = "2-4a"
path = "src/bin/2-4a-expedition.rs"

[[bin]]
name = "2-4b"
path = "src/bin/2-4b-food-chain.rs"

[[bin]]
name = "2-5a"
path = "src/bin/2-5a-bipartite-judge.rs"

[[bin]]
name = "2-5b"
path = "src/bin/2-5b-roadblocks.rs"

[[bin]]
name = "2-5c"
path = "src/bin/2-5c-conscription.rs"

[[bin]]
name = "2-5d"
path = "src/bin/2-5d-layout.rs"

[[bin]]
name = "2-6a"
path = "src/bin/2-6a-gcd.rs"

[[bin]]
name = "2-6b"
path = "src/bin/2-6b-extend-gcd.rs"

[[bin]]
name = "2-6c"
path = "src/bin/2-6c-eratosthenes.rs"

[[bin]]
name = "2-6d"
path = "src/bin/2-6d-seg-eratosthenes.rs"

[[bin]]
name = "2-6e"
path = "src/bin/2-6e-carmichael.rs"

[[bin]]
name = "3-1a"
path = "src/bin/3-1a-lower-bound.rs"

[[bin]]
name = "3-1b"
path = "src/bin/3-1b-cable-master.rs"

[[bin]]
name = "3-1c"
path = "src/bin/3-1c-aggressive-cows.rs"

[[bin]]
name = "3-1d"
path = "src/bin/3-1d-average-max.rs"

[[bin]]
name = "3-2a"
path = "src/bin/3-2a-subsequence.rs"

[[bin]]
name = "3-2b"
path = "src/bin/3-2b-jessicas-reading.rs"

[[bin]]
name = "3-2c"
path = "src/bin/3-2c-face-the-right-way.rs"

[[bin]]
name = "3-2d"
path = "src/bin/3-2d-fliptile.rs"

[[bin]]
name = "3-2e"
path = "src/bin/3-2e-physics-experiment.rs"

[[bin]]
name = "3-2f"
path = "src/bin/3-2f-4-values-whose-sum-is-0.rs"

[[bin]]
name = "3-2g"
path = "src/bin/3-2g-huge-knapsack.rs"

[[bin]]
name = "3-2h"
path = "src/bin/3-2h-coordinate-compression.rs"

[[bin]]
name = "3-3a"
path = "src/bin/3-3a-crane.rs"

[[bin]]
name = "3-3b"
path = "src/bin/3-3b-bubble-sort.rs"

[[bin]]
name = "3-3c"
path = "src/bin/3-3c-simple-problem-with-integers.rs"

[[bin]]
name = "3-3d"
path = "src/bin/3-3d-kth-number.rs"

[[bin]]
name = "3-3e"
path = "src/bin/3-3e-kth-number.rs"

[[bin]]
name = "3-4a"
path = "src/bin/3-4a-traveling-salesman.rs"

[[bin]]
name = "3-4b"
path = "src/bin/3-4b-traveling-by-stagecoach.rs"

[[bin]]
name = "3-4c"
path = "src/bin/3-4c-domino.rs"

[[bin]]
name = "3-4d"
path = "src/bin/3-4d-fibonacci.rs"

[[bin]]
name = "3-4e"
path = "src/bin/3-4e-blocks.rs"

[[bin]]
name = "3-4f"
path = "src/bin/3-4f-matrix-power-series.rs"

[[bin]]
name = "3-4g"
path = "src/bin/3-4g-minimizing-maximizer.rs"

[[bin]]
name = "3-5a"
path = "src/bin/3-5a-max-flow.rs"

[[bin]]
name = "3-5b"
path = "src/bin/3-5b-bipartite-matching.rs"

[[bin]]
name = "3-5c"
path = "src/bin/3-5c-min-cost-flow.rs"

[[bin]]
name = "3-5d"
path = "src/bin/3-5d-asteroids.rs"

[[bin]]
name = "3-5e"
path = "src/bin/3-5e-evacuation.rs"

[[bin]]
name = "3-5f"
path = "src/bin/3-5f-dual-core-cpu.rs"

[[bin]]
name = "3-5g"
path = "src/bin/3-5g-farm-tour.rs"

[[bin]]
name = "3-5h"
path = "src/bin/3-5h-evacuation-plan.rs"

[[bin]]
name = "3-5i"
path = "src/bin/3-5i-the-windys.rs"

[[bin]]
name = "3-5j"
path = "src/bin/3-5j-intervals.rs"

[[bin]]
name = "3-6a"
path = "src/bin/3-6a-jack-straws.rs"

[[bin]]
name = "3-6b"
path = "src/bin/3-6b-beauty-contest.rs"

[[bin]]
name = "3-6c"
path = "src/bin/3-6c-intersection-of-two-prisms.rs"
